--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,7 @@ name: Jeong Hansol
 user_description: Programmer
 profile_pic: /assets/img/profile.png
 favicon: /assets/img/favicon.png
-baseurl: "/"
-url: "https://hansoli.dev/"
+url: "https://hansoli.dev"
 encoding: utf-8
 
 # Build settings
